--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ body {
 }
 
 .list-item-text {
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 
 /* ===== HEADER ===== */
@@ -155,13 +155,13 @@ body {
   max-width: 1440px;
   margin: 0 auto;
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 
 .hero-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 188px 331px;
 }
 
 .hero-title {
@@ -171,6 +171,7 @@ body {
   text-align: center;
   color: #ffffff;
   margin-bottom: 48px;
+  max-width: 496px;
 }
 
 .hero-button {
@@ -236,6 +237,7 @@ body {
 .team-item {
   width: calc((100% - 72px) / 4);
   background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
@@ -295,16 +297,11 @@ body {
 
 .page-footer {
   background-color: #2e2f42;
-}
-
-.footer-container {
-  padding-top: 100px;
-  padding-bottom: 100px;
-  padding-left: 0;
+  padding: 100px 0;
 }
 
 .logo-footer {
-  display: block;
+  display: inline-block;
   margin-bottom: 16px;
 }
 
